Code cleanup (2)